--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.8",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.3.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.14.0",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
@@ -27,6 +30,7 @@
     "react-spinners": "^0.14.1",
     "sha256": "^0.2.0",
     "slick-carousel": "^1.8.1",
+    "stripe": "^17.4.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
